# mailingwork-archiver

./: .gitignore  main.py  pyproject.toml  scrapy.cfg
data/: output.json
libs/: data_refiner.py  downloader.py
mailingwork_scraper/: items.py  middlewares.py  pipelines.py  settings.py
mailingwork_scraper/spiders/: archievespider.py
