[tool.poetry]
name = "mailingwork-archiever"
version = "0.1.0"
description = ""
authors = ["Stevan Vlajic <91951603+stevan06v@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
crawl4ai = "^0.5.0.post4"
playwright = "^1.50.0"
pydantic = "^2.10.6"
openai = "^1.66.3"
scrapy = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
